# rust-metasploit

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .rustc_info.json  .rustdoc_fingerprint.json  Cargo.toml  README.md  msf.py
.github/workflows/: rust.yml
examples/: .listener.rs.swp  auth.rs  console.rs  core.rs  jobs.rs  listener.rs  modules.rs  plugins.rs  sessions.rs
src/: .client.rs.swp  .connect.rs.swp  client.rs  connect.rs  error.rs  lib.rs  value.rs
src/msf/: .goutputstream-5URD70  auth.rs  common.rs  console.rs  core.rs  jobs.rs  jobs.rs.bkp  mod.rs  modules.rs  plugins.rs  sessions.rs  sessions.rs.bkp
src/msf/async/: console.rs  db.rs  jobs.rs  modules.rs
src/msf/blocking/: console.rs  core.rs  jobs.rs  mod.rs  modules.rs  plugins.rs
src/structs/: auth.rs  console.rs  core.rs  jobs.rs  sessions.rs
src/structs/request/: auth.rs  console.rs  core.rs  db.rs  modules.rs  sessions.rs
src/structs/response/: auth.rs  console.rs  core.rs  mod.rs  modules.rs  sessions.rs
v1/: Cargo.toml
v1.0.1/examples/: jobs.rs  sessions.rs
v1.0.1/src/: client.rs
v1.0.1/src/msf/: auth.rs  core.rs  modules.rs  plugins.rs
v1.0.1/src/structs/request/: jobs.rs
v1.0.1/src/structs/response/: jobs.rs  plugins.rs
v1.1/: Cargo.toml
v1.1/examples/: auth.rs  modules.rs  plugins.rs
v1.1/src/: client.rs  connect.rs  error.rs  lib.rs
v1.1/src/async/: mod.rs
v1.1/src/async/msf/: auth.rs  console.rs  core.rs  jobs.rs  mod.rs  modules.rs  plugins.rs  sessions.rs
v1.1/src/msf/: auth.rs  console.rs  core.rs  db.rs  jobs.rs  mod.rs  modules.rs  plugins.rs  sessions.rs
v1.1/src/msf/blocking/: auth.rs  mod.rs  modules.rs  plugins.rs  sessions.rs
v1.1/src/structs/request/: db.rs  modules.rs
v1.1/src/structs/response/: core.rs  db.rs  modules.rs
v1.1/src/sync/msf/: auth.rs  console.rs  core.rs  db.rs  mod.rs  modules.rs  sessions.rs
v1.2/: Cargo.toml
v1.2/IMPORTANT_NOTICE/: NOTICE
v1.2/src/: client.rs  error.rs  lib.rs  value.rs
v1.2/src/msf/: auth.rs  console.rs  core.rs  jobs.rs  mod.rs  modules.rs  plugins.rs  sessions.rs
v1.2/src/msf/async/: auth.rs  core.rs  db.rs  jobs.rs  plugins.rs  sessions.rs
v1.2/src/msf/async_msf/: auth.rs  console.rs  core.rs  jobs.rs  mod.rs  modules.rs  plugins.rs  sessions.rs
v1.2/src/msf/blocking/: .db.rs.swp  auth.rs  console.rs  db.rs  jobs.rs  modules.rs  sessions.rs
v1.2/src/structs/request/: .db.rs.swp  db.rs
v1.3/IMPORTANT_NOTICE/: main.rs
v1.3/src/: error.rs
v1.3/src/msf/: mod.rs
v1.3/src/msf/async/: console.rs  core.rs  custom.rs  modules.rs
v1.3/src/msf/blocking/: auth.rs  core.rs  custom.rs  db.rs  plugins.rs  sessions.rs
v1.3/src/structs/request/: mod.rs
v1/examples/: auth.rs  console.rs  core.rs
v1/src/: connect.rs
v1/src/msf/: modules.rs
v1/src/structs/request/: auth.rs  console.rs  core.rs  plugins.rs  sessions.rs
v1/src/structs/response/: console.rs  modules.rs  sessions.rs
