[package]
name = "rust-metasploit"
version = "0.1.6"
authors = ["h4ck3r@parrot"]
edition = "2018"
readme="README.md"
description="Rust wrapper for metasploit"

[dependencies]
reqwest={ version="0.11.4",features=["blocking","json"] }
rmp-serde="0.13.7"
serde={ version="1.0.117" , features=["derive"]}
serde_json="1.0.66"
[lib]
name="metasploit"

[net]  
git-fetch-with-cli = true
